      Outside of that use case, YMMV.  [ticket:1477]

    - Improved error message when query() is called with
      a non-SQL /entity expression. [ticket:1476]
      
- sql
    - Fixed a bug in extract() introduced in 0.5.4 whereby
      the string "field" argument was getting treated as a 
      ClauseElement, causing various errors within more 
      complex SQL transformations.
- ext
   - The collection proxies produced by associationproxy are now
     pickleable.  A user-defined proxy_factory however
     is still not pickleable unless it defines __getstate__
     and __setstate__. [ticket:1446]
      
0.5.5
=======
- general
    - unit tests have been migrated from unittest to nose.  See
      README.unittests for information on how to run the tests.
      [ticket:970]

- orm
    - The "foreign_keys" argument of relation() will now propagate
      automatically to the backref in the same way that primaryjoin
      and secondaryjoin do.  For the extremely rare use case where
      the backref of a relation() has intentionally different
      "foreign_keys" configured, both sides now need to be
      configured explicity (if they do in fact require this setting,
      see the next note...).

    - ...the only known (and really, really rare) use case where a
      different foreign_keys setting was used on the
      forwards/backwards side, a composite foreign key that
      partially points to its own columns, has been enhanced such
      that the fk->itself aspect of the relation won't be used to
      determine relation direction.

    - Session.mapper is now *deprecated*.

      Call session.add() if you'd like a free-standing object to be
      part of your session.  Otherwise, a DIY version of
      Session.mapper is now documented at
      http://www.sqlalchemy.org/trac/wiki/UsageRecipes/SessionAwareMapper
      The method will remain deprecated throughout 0.6.

    - Fixed Query being able to join() from individual columns of a